2003-07-28  Richard Williamson   <rjw@apple.com>

	Fixed 3323866.  Provide SPI to IB to enable scoping of preferences
	values on a document-by-document basis.

        Reviewed by Maciej.

        * WebView.subproj/WebPreferences.m:
        (-[WebPreferencesPrivate dealloc]):
        (-[WebPreferences initWithIdentifier:]):
        (-[WebPreferences initWithCoder:]):
        (+[WebPreferences _userDefaultsKeysForIB]):
        (+[WebPreferences _setIBCreatorID:]):
        (+[WebPreferences _IBCreatorID]):
        (-[WebPreferences _concatenateKeyWithIBCreatorID:]):
        * WebView.subproj/WebPreferencesPrivate.h:

2003-07-28  Darin Adler  <darin@apple.com>

        Reviewed by Maciej.

        - fixed 3344647 -- reachedTerminalState assertion in WebBaseResourceHandleDelegate.m

        * WebView.subproj/WebMainResourceClient.m: (-[WebMainResourceClient cancelWithError:]):
        Use [super cancelWithError:] rather than [self receivedError:]. I checked carefully to
        see that this code now does everything the old code did (and a bit more).

2003-07-28  Richard Williamson   <rjw@apple.com>

	Fixed 3341859. 
    	Check that the WebHTMLView is initialized in viewWillMoveToWindow: and
	viewDidMoveToWindow.  Don't do anything if we aren't initialized.  This
	happens when decoding a WebView.  When WebViews are decoded their subviews
    	are created by initWithCoder: and so won't be normally initialized.  The 
	stub views are discarded by WebView.

        Reviewed by John.

        * WebView.subproj/WebHTMLView.m:
        (-[WebHTMLView viewWillMoveToWindow:]):
        (-[WebHTMLView viewDidMoveToWindow]):

2003-07-28  Darin Adler  <darin@apple.com>

        Reviewed by John.

        - fixed 3279864 -- remove class_poseAs calls from WebKit

        * WebView.subproj/WebHTMLView.m: (-[WebHTMLView initWithFrame:]):
        Call _setDrawsOwnDescendants, if we have a new enough AppKit.
        * WebView.subproj/WebHTMLViewPrivate.m: (+[WebHTMLView load]):