@@ -1,3 +1,13 @@
+2003-07-30  Richard Williamson   <rjw@apple.com>
+
+	Fixed 3356518.  Added private method called by IB to ensure
+	that autoresizeSubviews flag is turned on correctly.
+
+        Reviewed by mjs.
+
+        * WebView.subproj/WebViewPrivate.m:
+        (-[WebView _finishedMakingConnections]):
+
 2003-07-28  Richard Williamson   <rjw@apple.com>
 
 	Fixed 3323866.  Provide SPI to IB to enable scoping of preferences
